--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@ DerivedData/
 .swiftpm/configuration/registries.json
 .swiftpm/xcode/package.xcworkspace/contents.xcworkspacedata
 .netrc
+
+# files built on compile
+Sources/TeemojiClassifier.mlmodelc
+Sources/TeemojiClassifier.swift
