--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,7 +42,7 @@ jobs:
       # Create a zip file with the two release assets
       - name: Create Release ZIP
         if: startsWith(github.ref, 'refs/tags/')
-        run: zip -j .build/release/teemoji_${{ github.ref_name }}.zip .build/release/teemoji .build/release/teemoji_teemoji.bundle
+        run: zip -r .build/release/teemoji_${{ github.ref_name }}.zip .build/release/teemoji .build/release/teemoji_teemoji.bundle
 
       # Create GitHub Release and Upload Assets
       - name: Create GitHub Release
