--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,16 +39,16 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/')
         run: just build release
 
-      # Create a zip file with the two release assets
-      - name: Create Release ZIP
+      # Create a tar.gz file with the two release assets
+      - name: Create Release Tar.gz
         if: startsWith(github.ref, 'refs/tags/')
-        run: zip -r .build/release/teemoji_${{ github.ref_name }}.zip .build/release/teemoji .build/release/teemoji_teemoji.bundle
+        run: tar -czf teemoji.tar.gz -C .build/release teemoji teemoji_teemoji.bundle
 
       # Create GitHub Release and Upload Assets
       - name: Create GitHub Release
         if: startsWith(github.ref, 'refs/tags/')
         uses: softprops/action-gh-release@v2
         with:
-          files: .build/release/teemoji_${{ github.ref_name }}.zip
+          files: teemoji.tar.gz
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
